<resources>
    <string name="app_name">Logistica</string>
    <string name="hello">Aplicatie Logistica</string>

    <string name="pagina_principala">Pagina Principala</string>
    <string name="pagina_date_interne">Detalii Companie</string>
    <string name="date_interne">Date Interne Companie</string>

    <string name="informatii">Date Companie</string>
    <string name="activitati">Activitati</string>
    <string name="taxe">Taxe</string>
    <string name="situatie_stocuri">Situatie Stocuri</string>

    <string name="denumire_material">Material</string>
    <string name="stoc_minim">Stoc Minim</string>
    <string name="stoc_curent">Stoc Curent</string>

    <string name="denumire_furnizor">Furnizor</string>
    <string name="numar_inreg_RC">Numar Inregistrare\nRegistrul Comertului</string>
    <string name="adresa_furnizor">Detalii Adresa</string>
    <string name="rating">Rating</string>

    <string name="materiale">Materiale</string>
    <string name="furnizori">Furnizori</string>

    <string name="salveaza">Salveaza</string>
    <string name="salveaza_modificari">Salveaza Modificari</string>
    <string name="modifica">Modifica</string>
    <string name="adauga_material">Adauga Material</string>
    <string name="adauga_furnizor">Adauga Furnizor</string>
    <string name="adauga_taxa">Adauga Taxa</string>
    <string name="email_furnizor">Email</string>

    <string name="da">Da</string>
    <string name="nu">Nu</string>

    <string name="numar">Numar</string>
    <string name="strada">Strada</string>
    <string name="localitate">Localitate</string>
    <string name="judet">Judet/Sector</string>
    <string name="sector">Sector</string>
    <string name="tara">Tara</string>
    <string name="telefon">Telefon</string>

    <string name="cerere_oferta">Cerere Oferta</string>
    <string name="alege_material">Alege Material</string>
    <string name="cantitate">Cantitate</string>
    <string name="alege_furnizor">Alege Furnizor</string>
    <string name="pret">Pret</string>
    <string name="termen_limita_raspuns">Termen Raspuns</string>
    <string name="data_estimativa_livrare">Data Estimativa Livrare</string>
    <string name="data_livrare">Data Livrare</string>
    <string name="valoare">Valoare</string>
    <string name="verifica_doc">Verifica Document</string>
    <string name="trimite_doc">Trimite Document</string>

    <string name="material">Material</string>
    <string name="furnizor">Furnizor</string>
    <string name="status">Status</string>

    <string name="denumire_taxa">Denumire Taxa</string>
    <string name="procent_taxa">Procent</string>
    <string name="taxa">Taxa</string>

    <string name="trimite_comanda">Trimite Comanda</string>
    <string name="referinta">Referinta Cerere Oferta Nr.</string>
    <string name="comanda">Comanda</string>
    <string name="comenzi">Comenzi</string>
    <string name="valoare_totala">Valoare Totala</string>
    <string name="valoare_de_platit">Valoare de Plata</string>
    <string name="referinta_receptie">Adauga Referinta Comanda Nr.#</string>
    <string name="referinta_factura">Adauga Referinta Receptie Nr.#</string>
    <string name="referinta_plata">Adauga Referinta Factura Nr.#</string>
    <string name="cantitate_receptionata">Cantitate Receptionata</string>
    <string name="cantitate_comandata">Cantitate Comandata</string>
    <string name="diferenta">Diferenta</string>
    <string name="data_receptie">Data Receptie</string>
    <string name="receptie_material">Receptie Material</string>
    <string name="factura">Factura</string>
    <string name="plata">Plata</string>

    <string name="data_factura">Data facturarii</string>
    <string name="data_plata">Data plata</string>
    <string name="cantitate_facturata">Cantitate Facturata</string>
    <string name="grafic">Grafic</string>
    <string name="raportare">Raportare</string>

    <string name="suma_platita">Suma Platita</string>
    <string name="taxa_aplicata">Taxa Aplicata</string>
    <string name="raport_plati">Raport Plati</string>
    <string name="raport_cheltuieli">Raport Cheltuieli</string>

</resources>
