<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="disertatie.com.disertatie.activities.CerereOfertaActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <LinearLayout
        android:id="@+id/llMaterial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/toolbar"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:gravity="center_vertical"
            android:text="@string/alege_material" />

        <Spinner
            android:id="@+id/spinnerMaterial"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.8" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/llMaterial"
        android:orientation="horizontal"
        android:id="@+id/llFurnizor">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:text="@string/alege_furnizor" />

        <Spinner
            android:id="@+id/spinnerFurnizor"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.8" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llDataLivrare"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/llCantitatePret"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/data_estimativa_livrare" />

        <TextView
            android:id="@+id/tvDataLivrare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="11.12.2015" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llTermenRaspuns"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/llDataLivrare"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/termen_limita_raspuns" />

        <TextView
            android:id="@+id/tvTermenRaspuns"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="11.12.2015" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llCantitatePret"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/llFurnizor"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/etCantitate"
            android:layout_width="124dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/llFurnizor"
            android:ems="10"
            android:hint="@string/cantitate"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/etPret"
            android:layout_width="136dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/llFurnizor"
            android:ems="10"
            android:hint="@string/pret"
            android:inputType="numberDecimal" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/valoare" />

        <TextView
            android:id="@+id/tvValoare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="0.00" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="RON" />
    </LinearLayout>

</LinearLayout>
