<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="disertatie.com.disertatie.activities.AddMaterialActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:gravity="left|center_vertical"
                android:text="@string/referinta_factura" />

            <Spinner
                android:id="@+id/spinnerReferintaFactura"
                android:layout_width="74dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="0.42" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llDataFacturare"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:text="@string/data_factura" />

            <TextView
                android:id="@+id/tvDataFactura"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="11.12.2015"
                android:textStyle="bold" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="8dp">

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="0.02"
                android:text="@string/denumire_material" />

            <EditText
                android:id="@+id/etDenumireMat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1.05"
                android:enabled="false"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="8dp">

            <TextView
                android:id="@+id/textView12"
                android:layout_width="85dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:text="@string/cantitate_receptionata" />

            <EditText
                android:id="@+id/etCantReceptionata"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:ems="10"
                android:inputType="numberDecimal"
                android:enabled="false"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="8dp">

            <TextView
                android:layout_width="85dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:text="@string/pret" />

            <EditText
                android:id="@+id/etPret"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:ems="10"
                android:enabled="false"
                android:inputType="numberDecimal" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="8dp">

            <TextView
                android:id="@+id/textView14"
                android:layout_width="85dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:text="@string/cantitate_facturata" />

            <EditText
                android:id="@+id/etCantFacturata"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:ems="10"
                android:enabled="true"
                android:inputType="numberDecimal" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="8dp">

            <TextView
                android:layout_width="85dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:text="@string/taxa" />

            <EditText
                android:id="@+id/etTaxa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:ems="10"
                android:enabled="false"
                android:inputType="numberDecimal" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="77dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="0.02"
                android:text="@string/furnizor" />

            <TextView
                android:id="@+id/tvFurnizor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="0.79"
                android:gravity="center_vertical"
                android:text="Furnizor" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="77dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="0.02"
                android:text="@string/valoare_totala" />

            <TextView
                android:id="@+id/tvValoareFactura"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="0.79"
                android:gravity="center_vertical"
                android:text="0.00" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="8dp">


            <Button
                android:id="@+id/btnSalveazaFactura"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_weight="1"
                android:text="@string/salveaza" />
        </LinearLayout>

    </LinearLayout>


</LinearLayout>
